force-app/main/default/objects/Usage_Line_Item__c/Usage_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Usage Line Item</label>
    <nameField>
        <label>ID (Link)</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Usage Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>