force-app/main/default/objects/Usage_Line_Item__c/fields/Country_SGA_ID__c.field-meta.xml
<CustomField>
    <fullName>Country_SGA_ID__c</fullName>
    <label>Country SGA ID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>