force-app/main/default/objects/Usage_Line_Item__c/fields/Current_Month__c.field-meta.xml
<CustomField>
    <fullName>Current_Month__c</fullName>
    <formula>MONTH(TODAY())= MONTH(Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Month</label>
    <type>Checkbox</type>
</CustomField>