force-app/main/default/objects/Usage_Line_Item__c/fields/Monthly_DAU_MAU__c.field-meta.xml
<CustomField>
    <fullName>Monthly_DAU_MAU__c</fullName>
    <label>DAU/MAU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>