force-app/main/default/objects/Usage_Line_Item__c/fields/Monthly_Report__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Report__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Monthly Report</label>
    <referenceTo>Monthly_Report__c</referenceTo>
    <relationshipLabel>Usage Line Items</relationshipLabel>
    <relationshipName>Usage_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>