force-app/main/default/objects/Usage_Line_Item__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Must select a Wolves Opportunity.</errorMessage>
        <filterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>Wolves</value>
        </filterItems>
        <infoMessage>Please choose the relevant Wolves opportunity.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Usage Line Items</relationshipLabel>
    <relationshipName>Usage_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>