force-app/main/default/objects/Usage_Line_Item__c/fields/Previous_Month__c.field-meta.xml
<CustomField>
    <fullName>Previous_Month__c</fullName>
    <formula>IF(MONTH(TODAY())=1,12,MONTH(TODAY())-1)=  MONTH(Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Previous Month</label>
    <type>Checkbox</type>
</CustomField>