force-app/main/default/objects/Usage_Line_Item__c/fields/Price_Plan__c.field-meta.xml
<CustomField>
    <fullName>Price_Plan__c</fullName>
    <label>Price Plan</label>
    <referenceTo>Price_Plan__c</referenceTo>
    <relationshipLabel>Usage Line Items</relationshipLabel>
    <relationshipName>Usage_Line_Items</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>