force-app/main/default/objects/Usage_Line_Item__c/fields/PricePlanStatus__c.field-meta.xml
<CustomField>
    <fullName>PricePlanStatus__c</fullName>
    <formula>TEXT(Price_Plan__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PricePlanStatus</label>
    <type>Text</type>
</CustomField>