force-app/main/default/objects/Usage_Line_Item__c/fields/SYS_Lock_Item__c.field-meta.xml
<CustomField>
    <fullName>SYS_Lock_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SYS Lock Item</label>
    <type>Checkbox</type>
</CustomField>