force-app/main/default/objects/Usage_Line_Item__c/fields/SYS_Usage_Amount__c.field-meta.xml
<CustomField>
    <fullName>SYS_Usage_Amount__c</fullName>
    <formula>Rate__c * Monthly_DAU_MAU__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SYS Usage Amount</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>