force-app/main/default/objects/Usage_Line_Item__c/fields/Tier__c.field-meta.xml
<CustomField>
    <fullName>Tier__c</fullName>
    <label>Tier</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>