force-app/main/default/objects/Usage_Line_Item__c/recordTypes/Dynamic_Up_to_Date.recordType-meta.xml
<RecordType>
    <fullName>Dynamic_Up_to_Date</fullName>
    <active>true</active>
    <label>Dynamic Up to Date</label>
</RecordType>