force-app/main/default/objects/Usage_Line_Item__c/validationRules/Lock_Items.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_Items</fullName>
    <active>true</active>
    <errorConditionFormula>SYS_Lock_Item__c &amp;&amp;
 NOT(ISCHANGED(SYS_Lock_Item__c) ) &amp;&amp; 
NOT($Profile.Id=&apos;00eb0000000oBvcAAE&apos;)</errorConditionFormula>
    <errorMessage>Cannot edit Locked Usage Line Items.</errorMessage>
</ValidationRule>